--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+* {
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0px;
+  padding: 0px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.container {
+  width: 80%;
+  margin: auto;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 40px;
+  font-family: "Poppins", sans-serif;
+}
+
+.p-bold {
+  font-family: "Poppins", sans-serif;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
+  color: #898989;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 1440px;
+    max-width: 80%;
+    margin: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+}/*# sourceMappingURL=App.css.map */
