--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,22 @@ h1 {
   font-size: 40px;
   font-family: "Poppins", sans-serif;
 }
+h2 {
+  font-family: "Poppins", sans-serif;
+  color: #333;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+h3 {
+  font-family: "Poppins", sans-serif;
+  color: #333;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 .p-bold {
   font-family: "Poppins", sans-serif;
   color: #000000;
