--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 * {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -16,11 +17,9 @@ body {
 h1 {
   font-weight: 700;
   font-size: 40px;
-  font-family: "Poppins", sans-serif;
 }
 
 h2 {
-  font-family: "Poppins", sans-serif;
   color: #333;
   font-size: 32px;
   font-style: normal;
@@ -29,7 +28,6 @@ h2 {
 }
 
 h3 {
-  font-family: "Poppins", sans-serif;
   color: #333;
   font-size: 24px;
   font-style: normal;
@@ -37,15 +35,21 @@ h3 {
   line-height: normal;
 }
 
+h4 {
+  color: #333;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
 .p-bold {
-  font-family: "Poppins", sans-serif;
   color: #000000;
   font-size: 16px;
   font-weight: 500;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   color: #898989;
   font-size: 16px;
   font-weight: 500;
