--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
-
-body {
   margin: 0px;
   padding: 0px;
 }
@@ -17,6 +14,7 @@ body {
 h1 {
   font-weight: 700;
   font-size: 40px;
+  color: #3a3a3a;
 }
 
 h2 {
