--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,10 @@
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
-body {
   margin: 0px;
   padding: 0px;
 }
+
 .container {
   width: 80%;
   margin: auto;
@@ -16,6 +15,7 @@ body {
 h1 {
   font-weight: 700;
   font-size: 40px;
+  color: #3a3a3a;
 }
 h2 {
   color: #333;
