--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -21,14 +21,14 @@
       }
       .product-info {
         padding: 10px;
-        h3,
-        h4,
         p {
-          line-height: 0.4;
+          margin: 5px 0px;
         }
+
         .prices {
           display: flex;
           align-items: center;
+
           gap: 20px;
           p {
             text-decoration: line-through;
