--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -39,3 +39,65 @@ footer {
     }
   }
 }
+@media screen and (max-width: 1200px) {
+  label {
+    input:nth-child(1) {
+      width: 150px !important;
+      font-size: 12px !important;
+    }
+  }
+  p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 991px) {
+  footer {
+    padding: 0px 0px 30px 0px;
+    .footer-content {
+      .infos {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      .info {
+        text-align: center;
+        border-bottom: 1px solid gray;
+        width: 100%;
+        padding: 30px 0px;
+        &:nth-child(4) {
+          border: 0;
+          label {
+            display: flex;
+            input:nth-child(1) {
+              width: 300px !important;
+              padding: 3px 0px;
+              text-align: center;
+              font-size: 14px !important;
+              max-width: 100%;
+            }
+            input:nth-child(2) {
+              width: 120px;
+              padding: 3px 0px;
+            }
+          }
+        }
+        h4 {
+          font-size: 40px;
+        }
+        p.description {
+          font-size: 16px;
+          width: 80%;
+          margin: auto;
+          max-width: 100%;
+        }
+        .title {
+          font-size: 20px;
+          color: black;
+        }
+        p {
+          color: gray;
+        }
+      }
+    }
+  }
+}
