--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -39,4 +39,41 @@
 }
 .header-content .header-box .box-content button:hover {
   background-color: rgba(236, 165, 23, 0.696);
+}
+
+@media screen and (max-width: 1200px) {
+  .header-content {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 991px) {
+  .header-content .header-box {
+    width: 400px;
+    margin: auto;
+    height: 400px;
+  }
+  .header-content .header-box .box-content h1 {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 590px) {
+  .header-content .header-box .box-content {
+    gap: 14px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+  }
+  .header-content .header-box .box-content h1 {
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .header-content .header-box .box-content p {
+    font-size: 14px;
+  }
+  .header-content .header-box .box-content button {
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }/*# sourceMappingURL=Header.css.map */
