--- a/src/components/Header/Navbar/Navbar.css
+++ b/src/components/Header/Navbar/Navbar.css
@@ -1,6 +1,13 @@
 nav {
+  width: 100%;
+  background-color: #fff;
+  position: fixed;
+  z-index: 999;
   padding: 25px 0px;
   box-shadow: 0 4px 2px -2px rgba(111, 97, 97, 0.099);
+}
+nav svg {
+  display: none;
 }
 nav .navbar-container {
   display: flex;
@@ -43,4 +50,37 @@ nav .navbar-container .icons {
 }
 nav .navbar-container .icons .icon {
   cursor: pointer;
+}
+
+@media screen and (max-width: 991px) {
+  nav {
+    background-color: #fffcfc;
+    transition: 0.4s;
+    height: 80px;
+    overflow: hidden;
+  }
+  nav.active {
+    height: 200px;
+  }
+  nav .navbar-container {
+    flex-direction: column;
+    gap: 30px;
+  }
+  nav svg {
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 560px) {
+  nav.active {
+    height: 370px;
+  }
+  nav .navbar-container ul {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
