--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -18,6 +18,7 @@
       img.product-image {
         width: 100%;
         height: 330px;
+        object-fit: cover;
       }
       .product-info {
         padding: 10px;
