--- a/src/components/Section3/Section3.scss
+++ b/src/components/Section3/Section3.scss
@@ -11,3 +11,42 @@
     }
   }
 }
+
+@media screen and (max-width: 991px) {
+  .section3 {
+    .section3-main {
+      flex-direction: column;
+      text-align: center;
+
+      .s3-component {
+        width: 100%;
+        p {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 590px) {
+  .section3 {
+    .section3-main {
+      .s3-component {
+        &.section3-rightside {
+          .dots {
+            justify-content: center;
+            align-items: center;
+          }
+        }
+        .images {
+          flex-direction: column;
+          align-items: center;
+          img {
+            width: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+  }
+}
